partial #8295 - fixed text alignment

--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -3405,8 +3405,9 @@ body.ng-scope {
 	color: #7e828e;
 }
 .tickets-side-community {
-	float: right;
+	float: left;
 	color: #CCC;
+
 }
 .tickets-side-message {
 	line-height: 1.4em;
